tests/integration/snapshots/integration__conformance__y_structure_lonely_false.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
false
stdout ---
false

stderr ---
