tests/integration/snapshots/integration__conformance__y_structure_lonely_false.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
false
stdout --- 
false
stderr --- 
<empty>
