tests/integration/snapshots/integration__conformance__y_structure_lonely_int.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
42
stderr ---
