tests/integration/snapshots/integration__conformance__y_structure_lonely_negative_real.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
-0.1
stdout ---
-0.1

stderr ---
