tests/integration/snapshots/integration__conformance__y_structure_lonely_null.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
null
stdout ---
null

stderr ---
