tests/integration/snapshots/integration__conformance__y_structure_lonely_null.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
null
stdout ---
null

stderr ---
